# rapid_bag

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/rapid_bag/: recorder.hpp
src/: converter.cpp  recorder.cpp
